welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: 'while' expected but identifier found.
do prendBiscuit();retourne(){
                  ^DwarfCode:9: error: '(' expected but ';' found.
droite()
^